Alignment issues fized

--- a/client-v1/src/styles/main.scss
+++ b/client-v1/src/styles/main.scss
@@ -29,8 +29,10 @@ body {
   overflow-x: hidden !important;
 }
 
-.snap {
-  scroll-snap-align: start !important;
+@media screen and (min-width: 1100px) {
+  .snap {
+    scroll-snap-align: start !important;
+  }
 }
 
 #App {
@@ -45,19 +47,6 @@ body {
     text-decoration: none;
   }
 }
-
-// .parent-snap {
-//   scroll-snap-type: y mandatory;
-//   scroll-snap-points-y: repeat(100vh);
-
-//   overflow-y: scroll;
-//   scroll-behavior: smooth;
-//   height: 100vh;
-// }
-
-// .sub-snap {
-//   scroll-snap-align: start;
-// }
 
 .mouse {
   position: absolute;
